--- a/index.html
+++ b/index.html
@@ -8,4 +8,10 @@
   <h1>こんにちは！</h1>
   <p>ホームページ</p>
 </body>
+<nav></nav>
+nav {
+  width: 100%;
+  height: 70px;
+  background-color: dimgray;
+}
 </html>
