--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>My Site</title>
+  <style>
+  nav {
+  width: 100%;
+  height: 70px;
+  background-color: dimgray;
+  }
+  </style>
 </head>  
 <body>
   <h1>こんにちは！</h1>
   <p>ホームページ</p>
+  <nav></nav>
 </body>
-<nav></nav>
-nav {
-  width: 100%;
-  height: 70px;
-  background-color: dimgray;
-}
+
 </html>
