--- a/index.html
+++ b/index.html
@@ -9,12 +9,29 @@
   height: 70px;
   background-color: dimgray;
   }
+  ul{
+    display: flex
+  }
+  a{
+    display: block;
+    text-decoration: none;
+    color: white;
+    margin-right: 35px;
+  }
   </style>
 </head>  
 <body>
   <h1>Hello World</h1>
   <p>ホームページ</p>
-  <nav></nav>
+  <nav>
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">NEW ITEM</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">POPUP</a></li>
+      <li><a href="#">ACCESS</a></li>
+    </ul>
+  </nav>
 </body>
 
 </html>
