--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   width: 100%;
   height: 70px;
   background-color: dimgray;
-  }
+  padding-top: 5px;
+  box-sizing: border-box;
+}
   ul{
     display: flex
   }
@@ -17,6 +19,12 @@
     text-decoration: none;
     color: white;
     margin-right: 35px;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  a:hover{
+    color: rgb(214, 237 ,248);
   }
   </style>
 </head>  
