--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
   box-sizing: border-box;
 }
   ul{
-    display: flex
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  li{
+    margin-right: 35px;
   }
   a{
     display: block;
     text-decoration: none;
     color: white;
     margin-right: 35px;
-    position: fixed;
-    top: 0;
-    left: 0;
   }
   a:hover{
     color: rgb(214, 237 ,248);
@@ -29,8 +32,6 @@
   </style>
 </head>  
 <body>
-  <h1>Hello World</h1>
-  <p>ホームページ</p>
   <nav>
     <ul>
       <li><a href="#">HOME</a></li>
