--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <title>My Site</title>
   <style>
   nav {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 70px;
   background-color: dimgray;
   padding-top: 5px;
   box-sizing: border-box;
+  z-index: 1000;
 }
   ul{
     display: flex;
@@ -40,6 +44,7 @@
       <li><a href="#">POPUP</a></li>
       <li><a href="#">ACCESS</a></li>
     </ul>
+    <div style="height: 70px;"></div>
   </nav>
 </body>
 
