--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- HOMEセクション -->
   <section id="home">
     <h1>ようこそ、私たちの会社へ</h1>
-    <img src="C:\Users\高橋翔人\OneDrive\デスクトップ\VSCode\html\image\stor_icon.JPEG" alt="会社の外観">
+    <img src="image/stor_icon.JPEG" alt="会社の外観">
     <p>
       私たちの会社は、自然と調和したライフスタイルを提案するブランドです。<br>
       地元の素材を活かした商品づくりを大切にし、皆さまの暮らしに彩りを添えることを目指しています。
