--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <nav>
     <ul>
       <li><a href="#home">HOME</a></li>
-      <li><a href="#">ITEM</a></li>
+      <li><a href="#">お店について</a></li>
       <li><a href="#">BLOG</a></li>
       <li><a href="#">POPUP</a></li>
       <li><a href="#">ACCESS</a></li>
@@ -66,8 +66,25 @@
     <h1>ようこそ、私たちの会社へ</h1>
     <img src="image/stor_icon.JPEG" alt="会社の外観">
     <p>
-      私たちの会社は、自然と調和したライフスタイルを提案するブランドです。<br>
-      地元の素材を活かした商品づくりを大切にし、皆さまの暮らしに彩りを添えることを目指しています。
+      「ふらっと寄れて、なんかいい服が見つかる。」<br>
+      <br>
+      古着って、ちょっとむずしそう？<br>
+      ここは、そんなイメージをくつがえす<br>
+      <br>
+      "寄り道で出会う、ちょっといい服"<br>
+      <br>
+      60～90年代の古着を中心に<br>
+      色や柄をちょっと楽しいアイテムたちをセレクト。<br>
+      ポップな色、気の利いたデザイン、<br>
+      シンプルなものまでこだわって集めています。<br>
+      古着のことをまだよくわからなくても大丈夫。<br>
+      「これかわいい!」から始めて、<br>
+      私たちと一緒にお洒落を楽しみましょう!<br>
+      もちろんヴィンテージ好きなあなたにも<br>
+      楽しんでもらえるように、<br>
+      ちょっと通なアイテムもばっちり置いています。<br>
+      <br>
+      あなたの「なんか好き」が見つかりますように<br>
     </p>
   </section>
 </body>
