--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
   <!-- HOMEセクション -->
   <section id="home">
-    <h1>ようこそ、私たちの会社へ</h1>
     <img src="image/stor_icon.JPEG" alt="会社の外観">
+    <h1>お店について</h1>
     <p>
       「ふらっと寄れて、なんかいい服が見つかる。」<br>
       <br>
@@ -86,6 +86,7 @@
       <br>
       あなたの「なんか好き」が見つかりますように<br>
     </p>
+    <h1>アクセス</h1>
   </section>
 </body>
 </html>
