--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
     a:hover {
       color: rgb(214, 237, 248);
     }
+    .access-container{
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      gap: 20px;
+      padding: 20px;
+      max-width: 1000px;
+      margin: 0 auto;
+      text-align: left;
+    }
+    .access-text{
+      flex: 1;
+      min-width: 250px;
+    }
+    .access-map{
+      flex: 1;
+      min-width: 300px;
+    }
 
     /* セクションのスタイル */
     section {
@@ -89,15 +108,27 @@
   </section>
   <section id="access">
     <h2>アクセス</h2>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13094.163369647933!2d136.5375356433589!3d34.867762861887066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60038a57b80993b9%3A0xcecf4f0635db7a25!2z44CSNTEzLTA4MDMg5LiJ6YeN55yM6Yi06bm_5biC5LiJ5pel5biC55S6!5e0!3m2!1sja!2sjp!4v1771147081912!5m2!1sja!2sjp"
-      width="300"
-      height="450"
-      style="border:0"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    <div class="access-container">
+      <div class="access-text">
+        <p>
+          〒513-0803 三重県鈴鹿市三日市町<br>
+          近鉄「三日市駅」から徒歩5分。<br>
+          駐車場もございますので、お車でも安心してお越しください。<br>
+          営業時間：11:00〜18:00（火曜定休）<br>
+        </p>
+      </div>
+    </div>
+    <div class="accexx-map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13094.163369647933!2d136.5375356433589!3d34.867762861887066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60038a57b80993b9%3A0xcecf4f0635db7a25!2z44CSNTEzLTA4MDMg5LiJ6YeN55yM6Yi06bm_5biC5LiJ5pel5biC55S6!5e0!3m2!1sja!2sjp!4v1771147081912!5m2!1sja!2sjp"
+        width="100%"
+        height="300"
+        style="border:0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
   </section>
 </body>
 </html>
