--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
     section {
       padding-top: 80px;
       margin-top: -70px;
+    }
+    #home {
       text-align: center;
     }
 
     img {
-      max-width: 80%;
+      max-width: 30%;
       height: auto;
       margin-bottom: 20px;
     }
@@ -82,7 +84,7 @@
 
   <!-- HOMEセクション -->
   <section id="home">
-    <img src="image/stor_icon.JPEG" alt="会社の外観">
+    <img src="image/stor_icon.jpeg" alt="会社の外観">
     <h1>お店について</h1>
     <p>
       「ふらっと寄れて、なんかいい服が見つかる。」<br>
@@ -109,25 +111,26 @@
   <section id="access">
     <h2>アクセス</h2>
     <div class="access-container">
+      <div class="access-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13094.163369647933!2d136.5375356433589!3d34.867762861887066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60038a57b80993b9%3A0xcecf4f0635db7a25!2z44CSNTEzLTA4MDMg5LiJ6YeN55yM6Yi06bm_5biC5LiJ5pel5biC55S6!5e0!3m2!1sja!2sjp!4v1771147081912!5m2!1sja!2sjp"
+          width="100%"
+          height="300"
+          style="border:0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
       <div class="access-text">
-        <p>
+        <h3>アクセス情報</h3> 
+        <p> 
           〒513-0803 三重県鈴鹿市三日市町<br>
           近鉄「三日市駅」から徒歩5分。<br>
           駐車場もございますので、お車でも安心してお越しください。<br>
-          営業時間：11:00〜18:00（火曜定休）<br>
+          営業時間：11:00〜18:00（火曜定休）<br> 
         </p>
       </div>
-    </div>
-    <div class="accexx-map">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13094.163369647933!2d136.5375356433589!3d34.867762861887066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60038a57b80993b9%3A0xcecf4f0635db7a25!2z44CSNTEzLTA4MDMg5LiJ6YeN55yM6Yi06bm_5biC5LiJ5pel5biC55S6!5e0!3m2!1sja!2sjp!4v1771147081912!5m2!1sja!2sjp"
-        width="100%"
-        height="300"
-        style="border:0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
     </div>
   </section>
 </body>
