--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     a:hover {
       color: rgb(214, 237, 248);
     }
+    #access h2{
+      text-align:center;
+    }
     .access-container{
       display: flex;
       justify-content: space-between;
@@ -84,7 +87,7 @@
 
   <!-- HOMEセクション -->
   <section id="home">
-    <img src="image/stor_icon.jpeg" alt="会社の外観">
+    <img src="image/stor_icon.JPEG" alt="会社の外観">
     <h1>お店について</h1>
     <p>
       「ふらっと寄れて、なんかいい服が見つかる。」<br>
