--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
       min-width: 300px;
     }
 
-    /* セクションのスタイル */
     section {
       padding-top: 80px;
       margin-top: -70px;
@@ -75,14 +74,13 @@
   <nav>
     <ul>
       <li><a href="#home">HOME</a></li>
-      <li><a href="#">お店について</a></li>
-      <li><a href="#">BLOG</a></li>
-      <li><a href="#">POPUP</a></li>
-      <li><a href="#">ACCESS</a></li>
+      <li><a href="#about">お店について</a></li>
+      <li><a href="#blog">BLOG</a></li>
+      <li><a href="#popup">POPUP</a></li>
+      <li><a href="#access">ACCESS</a></li>
     </ul>
   </nav>
 
-  <!-- ナビゲーションバーの高さ分の余白 -->
   <div style="height: 70px;"></div>
 
   <!-- HOMEセクション -->
@@ -111,6 +109,37 @@
       あなたの「なんか好き」が見つかりますように<br>
     </p>
   </section>
+
+  <!-- お店についてセクション -->
+  <section id="about">
+    <h2>お店について</h2>
+    <p style="text-align: center;">
+      私たちのお店は、ファッションをもっと身近に、もっと楽しくする場所です。<br>
+      スタッフがセレクトしたアイテムは、どれも個性が光る一点ものばかり。<br>
+      あなたのスタイルにぴったりの一着を見つけてくださいね。
+    </p>
+  </section>
+
+  <!-- BLOGセクション -->
+  <section id="blog">
+    <h2>BLOG</h2>
+    <p style="text-align: center;">
+      新入荷アイテムの紹介や、スタッフのおすすめコーディネート、<br>
+      イベント情報などをブログで発信中！ぜひチェックしてみてください。
+    </p>
+  </section>
+
+  <!-- POPUPセクション -->
+  <section id="popup">
+    <h2>POPUP</h2>
+    <p style="text-align: center;">
+      定期的に開催しているPOPUPイベントでは、<br>
+      限定アイテムやコラボ商品も登場！<br>
+      次回の開催情報をお楽しみに♪
+    </p>
+  </section>
+
+  <!-- アクセスセクション -->
   <section id="access">
     <h2>アクセス</h2>
     <div class="access-container">
