--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#home">HOME</a></li>
+      <li><a href="#about">HOME</a></li>
       <li><a href="#about">お店について</a></li>
-      <li><a href="#blog">BLOG</a></li>
-      <li><a href="#popup">POPUP</a></li>
+      <li><a href="blog.html">BLOG</a></li> 
+      <li><a href="popup.html">POPUP</a></li>
       <li><a href="#access">ACCESS</a></li>
     </ul>
   </nav>
@@ -84,7 +84,7 @@
   <div style="height: 70px;"></div>
 
   <!-- HOMEセクション -->
-  <section id="home">
+  <section id="about">
     <img src="image/stor_icon.JPEG" alt="会社の外観">
     <h1>お店について</h1>
     <p>
@@ -107,35 +107,6 @@
       ちょっと通なアイテムもばっちり置いています。<br>
       <br>
       あなたの「なんか好き」が見つかりますように<br>
-    </p>
-  </section>
-
-  <!-- お店についてセクション -->
-  <section id="about">
-    <h2>お店について</h2>
-    <p style="text-align: center;">
-      私たちのお店は、ファッションをもっと身近に、もっと楽しくする場所です。<br>
-      スタッフがセレクトしたアイテムは、どれも個性が光る一点ものばかり。<br>
-      あなたのスタイルにぴったりの一着を見つけてくださいね。
-    </p>
-  </section>
-
-  <!-- BLOGセクション -->
-  <section id="blog">
-    <h2>BLOG</h2>
-    <p style="text-align: center;">
-      新入荷アイテムの紹介や、スタッフのおすすめコーディネート、<br>
-      イベント情報などをブログで発信中！ぜひチェックしてみてください。
-    </p>
-  </section>
-
-  <!-- POPUPセクション -->
-  <section id="popup">
-    <h2>POPUP</h2>
-    <p style="text-align: center;">
-      定期的に開催しているPOPUPイベントでは、<br>
-      限定アイテムやコラボ商品も登場！<br>
-      次回の開催情報をお楽しみに♪
     </p>
   </section>
 
