--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Site</title>
+  charset="UTF-8"> 
+  <title>My Site</title> 
+  <!-- Font Awesomeの読み込み --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     nav {
       position: fixed;
@@ -81,6 +84,9 @@
       <li><a href="blog.html">BLOG</a></li> 
       <li><a href="popup.html">POPUP</a></li>
       <li><a href="#access">ACCESS</a></li>
+      <!-- Instagramアイコン --> 
+      <li> <a href="https://www.instagram.com/salt_used/" target="_blank" aria-label="Instagram"> <i class="fab fa-instagram"></i> </a> 
+      </li>
     </ul>
   </nav>
 
