--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       <li><a href="popup.html">POPUP</a></li>
       <li><a href="#access">ACCESS</a></li>
       <!-- Instagramアイコン --> 
-    </ul> <ul class="nav-right"> 
+    </ul> 
+    <ul class="nav-right"> 
       <li> <a href="https://www.instagram.com/salt_used/" target="_blank" aria-label="Instagram"> <i class="fab fa-instagram"></i> </a> 
       </li> 
     </ul>
