--- a/popup.html
+++ b/popup.html
@@ -56,6 +56,29 @@
     <h1>POPUPイベント</h1>
     <p>期間限定のPOPUPイベント情報をお届けします！</p>
     <p>（開催日程や場所、特別アイテムの紹介などをここに追加できます）</p>
+    <img src="image/popup_vol3.png" alt="ポップアップ">
+    <p>
+      2026.5/2 13時〜18時<br>
+      5/3 13時〜18時<br>
+      場所 〒513-0803 三重県鈴鹿市三日市町１１５７<br>
+      <br>
+      2026年初POPUPです‼<br>
+      今回は…<br>
+      <br>
+      春服】or 【夏服】です！！<br>
+      すでに春の兆しを花粉と共に感じておりますが…
+      暖かくなるとファッションにも色が増えて
+      オシャレが楽しくなるという方も
+      多いのではないでしょうか
+      古着のみならず、色々な方とお話しできる機会なので
+      古着好き、服好きはもちろんですが、
+      服に興味がない方や服を好きになり始めた方、
+      どんな方でも気軽に遊びにきてもらえたら嬉しいです！！
+      好評の割引チャレンジや
+      当日のさらに詳しい情報については  
+      後日また載せていきますので、
+      恐れ入りますがお待ちください。
+    </p>
   </section>
 </body>
 </html>
