--- a/popup.html
+++ b/popup.html
@@ -66,18 +66,18 @@
       今回は…<br>
       <br>
       春服】or 【夏服】です！！<br>
-      すでに春の兆しを花粉と共に感じておりますが…
-      暖かくなるとファッションにも色が増えて
-      オシャレが楽しくなるという方も
-      多いのではないでしょうか
-      古着のみならず、色々な方とお話しできる機会なので
-      古着好き、服好きはもちろんですが、
-      服に興味がない方や服を好きになり始めた方、
-      どんな方でも気軽に遊びにきてもらえたら嬉しいです！！
-      好評の割引チャレンジや
-      当日のさらに詳しい情報については  
-      後日また載せていきますので、
-      恐れ入りますがお待ちください。
+      すでに春の兆しを花粉と共に感じておりますが…<br>
+      暖かくなるとファッションにも色が増えて<br>
+      オシャレが楽しくなるという方も<br>
+      多いのではないでしょうか<br>
+      古着のみならず、色々な方とお話しできる機会なので<br>
+      古着好き、服好きはもちろんですが、<br>
+      服に興味がない方や服を好きになり始めた方、<br>
+      どんな方でも気軽に遊びにきてもらえたら嬉しいです！！<br>
+      好評の割引チャレンジや<br>
+      当日のさらに詳しい情報については<br>
+      後日また載せていきますので、<br>
+      恐れ入りますがお待ちください。<br>
     </p>
   </section>
 </body>
