--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <p>
       「ふらっと寄れて、なんかいい服が見つかる。」<br>
       <br>
-      古着って、ちょっとむずしそう？<br>
+      古着って、ちょっとむずかしそう？<br>
       ここは、そんなイメージをくつがえす<br>
       <br>
       "寄り道で出会う、ちょっといい服"<br>
