--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,9 @@
       margin-top: -70px;
       text-align: center;
     }
+    .popup-image { 
+      width: 300px; 
+      height: auto; /* アスペクト比を保つため */ }
   </style>
 </head>
 <body>
@@ -55,17 +58,13 @@
   <section id="popup">
     <h1>POPUPイベント</h1>
     <p>期間限定のPOPUPイベント情報をお届けします！</p>
-    <p>（開催日程や場所、特別アイテムの紹介などをここに追加できます）</p>
-    <img src="image/popup_vol3.png" alt="ポップアップ">
+    <img src="image/popup_vol3.png" alt="ポップアップ" class="popup-image">
     <p>
-      2026.5/2 13時〜18時<br>
-      5/3 13時〜18時<br>
-      場所 〒513-0803 三重県鈴鹿市三日市町１１５７<br>
       <br>
       2026年初POPUPです‼<br>
       今回は…<br>
       <br>
-      春服】or 【夏服】です！！<br>
+      【春服】or 【夏服】です！！<br>
       すでに春の兆しを花粉と共に感じておりますが…<br>
       暖かくなるとファッションにも色が増えて<br>
       オシャレが楽しくなるという方も<br>
@@ -78,6 +77,10 @@
       当日のさらに詳しい情報については<br>
       後日また載せていきますので、<br>
       恐れ入りますがお待ちください。<br>
+      <br>
+      日時:2026.5/2 13時〜18時<br>
+                5/3 13時〜18時<br>
+      場所 〒513-0803 三重県鈴鹿市三日市町１１５７<br>
     </p>
   </section>
 </body>
