--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,22 @@
     }
     .popup-image { 
       width: 300px; 
-      height: auto; /* アスペクト比を保つため */ }
+      height: auto; /* アスペクト比を保つため */ 
+      border-radius: 8px;
+    }
+    .popup-container { 
+      display: flex; 
+      align-items: flex-start; 
+      justify-content: center; 
+      gap: 40px; 
+      flex-wrap: wrap; /* 画面が狭いときに折り返す */ 
+      margin-top: 20px; 
+    } 
+    .popup-text { 
+      flex: 1; 
+      max-width: 500px; 
+      text-align: left; 
+    }
   </style>
 </head>
 <body>
@@ -59,29 +74,36 @@
     <h1>POPUPイベント</h1>
     <p>期間限定のPOPUPイベント情報をお届けします！</p>
     <img src="image/popup_vol3.png" alt="ポップアップ" class="popup-image">
-    <p>
-      <br>
-      2026年初POPUPです‼<br>
-      今回は…<br>
-      <br>
-      【春服】or 【夏服】です！！<br>
-      すでに春の兆しを花粉と共に感じておりますが…<br>
-      暖かくなるとファッションにも色が増えて<br>
-      オシャレが楽しくなるという方も<br>
-      多いのではないでしょうか<br>
-      古着のみならず、色々な方とお話しできる機会なので<br>
-      古着好き、服好きはもちろんですが、<br>
-      服に興味がない方や服を好きになり始めた方、<br>
-      どんな方でも気軽に遊びにきてもらえたら嬉しいです！！<br>
-      好評の割引チャレンジや<br>
-      当日のさらに詳しい情報については<br>
-      後日また載せていきますので、<br>
-      恐れ入りますがお待ちください。<br>
-      <br>
-      日時:2026.5/2 13時〜18時<br>
-                5/3 13時〜18時<br>
-      場所 〒513-0803 三重県鈴鹿市三日市町１１５７<br>
-    </p>
+    <div class="popup-container">
+      <div class="popup-text">
+        <p>
+        <br>
+        2026年初POPUPです‼<br>
+        今回は…<br>
+        <br>
+        【春服】or 【夏服】です！！<br>
+        すでに春の兆しを花粉と共に感じておりますが…<br>
+        暖かくなるとファッションにも色が増えて<br>
+        オシャレが楽しくなるという方も<br>
+        多いのではないでしょうか<br>
+        古着のみならず、色々な方とお話しできる機会なので<br>
+        古着好き、服好きはもちろんですが、<br>
+        服に興味がない方や服を好きになり始めた方、<br>
+        どんな方でも気軽に遊びにきてもらえたら嬉しいです！！<br>
+        好評の割引チャレンジや<br>
+        当日のさらに詳しい情報については<br>
+        後日また載せていきますので、<br>
+        恐れ入りますがお待ちください。<br>
+        <br>
+        日時:2026.5/2 13時〜18時<br>
+                  5/3 13時〜18時<br>
+        場所 〒513-0803 三重県鈴鹿市三日市町１１５７<br>
+        </p>
+      </div>
+    <div class="popup-image"> 
+      <img src="image/popup_vol3.png" alt="ポップアップ"> 
+    </div>
+    </div>
   </section>
 </body>
 </html>
