--- a/popup.html
+++ b/popup.html
@@ -37,7 +37,7 @@
       margin-top: -70px;
       text-align: center;
     }
-    .popup-image { 
+    .popup-image img{ 
       width: 200px; 
       height: auto; /* アスペクト比を保つため */ 
       border-radius: 8px;
