--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
       left: 0;
       width: 100%;
       height: 70px;
-      background-color: dimgray;
+      background-color: rgb(201, 6, 6);
       padding-top: 5px;
       box-sizing: border-box;
       z-index: 1000;
