--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
       left: 0;
       width: 100%;
       height: 70px;
-      background-color: dimgray;
+      background-color: rgb(201, 6, 6);
       padding-top: 5px;
       box-sizing: border-box;
       z-index: 1000;
@@ -38,7 +38,7 @@
       text-align: center;
     }
     .popup-image img{ 
-      width: 200px; 
+      width: 300px; 
       height: auto; /* アスペクト比を保つため */ 
       border-radius: 8px;
     }
