--- a/blog.html
+++ b/blog.html
@@ -41,13 +41,15 @@
 </head>
 <body>
   <nav>
-    <ul>
-      <li><a href="index.html#home">HOME</a></li>
-      <li><a href="index.html#about">お店について</a></li>
-      <li><a href="blog.html">BLOG</a></li>
-      <li><a href="popup.html">POPUP</a></li>
-      <li><a href="index.html#access">ACCESS</a></li>
-    </ul>
+    <div class="nav-left">
+      <ul>
+        <li><a href="index.html#home">HOME</a></li>
+        <li><a href="index.html#about">お店について</a></li>
+        <li><a href="blog.html">BLOG</a></li>
+        <li><a href="popup.html">POPUP</a></li>
+        <li><a href="index.html#access">ACCESS</a></li>
+      </ul>
+    </div>
   </nav>
 
   <div style="height: 70px;"></div>
