--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       margin: 0; 
       padding: 0; 
     } 
+    .nav-right i{
+      font-size: 28px;
+    }
     .nav-right li { 
       margin-right: 0; /* 右側の余白は不要 */ 
     }
