--- a/blog.html
+++ b/blog.html
@@ -4,16 +4,34 @@
   <meta charset="UTF-8">
   <title>BLOG</title>
   <style>
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 70px;
-      background-color: rgb(201, 6, 6);
-      padding-top: 5px;
-      box-sizing: border-box;
-      z-index: 1000;
+    nav { 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+      background-color: rgb(201, 6, 6); 
+      height: 70px; 
+      padding: 0 20px; 
+      box-sizing: border-box; 
+      position: fixed; 
+      top: 0; 
+      left: 0; 
+      width: 100%; 
+      z-index: 1000; 
+    }
+    nav li { 
+      margin-right: 35px; 
+    }
+    nav ul { 
+      display: flex; 
+      list-style: none; 
+      margin: 0; 
+      padding: 0; 
+    } 
+    .nav-right i{
+      font-size: 56px;
+    }
+    .nav-right li { 
+      margin-right: 0; /* 右側の余白は不要 */ 
     }
     ul {
       display: flex;
@@ -48,6 +66,15 @@
         <li><a href="blog.html">BLOG</a></li>
         <li><a href="popup.html">POPUP</a></li>
         <li><a href="index.html#access">ACCESS</a></li>
+      </ul>
+    </div>
+    <div class="nav-right">
+      <ul class="nav-right"> 
+        <li> 
+          <a href="https://www.instagram.com/salt_used/" target="_blank" aria-label="Instagram"> 
+            <i class="fab fa-instagram"></i> 
+          </a> 
+        </li> 
       </ul>
     </div>
   </nav>
